<?xml version="1.0"?>
<package format="2">
  <name>any_realsense2_camera</name>
  <version>2.2.37</version>
  <description>RealSense Camera package allowing access to Intel T265 Tracking module and SR300 and D400 3D cameras</description>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <license>Apache 2.0</license>
  
  <url type="website">http://www.ros.org/wiki/RealSense</url>
  <url type="bugtracker">https://github.com/intel-ros/realsense/issues</url>

  <author email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</author>
  <author email="doron.hirshberg@intel.com">Doron Hirshberg</author>
  <buildtool_depend>catkin</buildtool_depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->
  <depend>any_librealsense2</depend>
  <depend>any_realsense2_msgs</depend>
  <depend>boost</depend>
  <depend>cv_bridge</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>
  <depend>eigen</depend>
  <depend>genmsg</depend>
  <depend>image_transport</depend>
  <depend>libjsoncpp-dev</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>

  <!-- Upstream realsense packages that are manually uploaded to the PPAs -->
  <exec_depend>librealsense2-dkms</exec_depend>
  <!-- The following also pulls in librealsense2, librealsense2-gl and librealsense2-net -->
  <exec_depend>librealsense2-utils</exec_depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
