<?xml version="1.0"?>
<package format="2">
  <name>any_realsense2_msgs</name>
  <version>2.2.19</version>
  <description>Messages for the RealSense Camera package</description>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <license>Apache 2.0</license>
  
  <url type="website">http://www.ros.org/wiki/RealSense</url>
  <url type="bugtracker">https://github.com/intel-ros/realsense/issues</url>

  <author email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</author>
  <author email="doron.hirshberg@intel.com">Doron Hirshberg</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
