<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>any_realsense2_msgs</name>
  <version>2.2.34</version>
  <description>Messages for the RealSense Camera package</description>
  <author email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</author>
  <author email="doron.hirshberg@intel.com">Doron Hirshberg</author>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://www.ros.org/wiki/RealSense</url>
  <url type="bugtracker">https://github.com/intel-ros/realsense/issues</url>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
